# pomodoro

./: Cargo.toml  Makefile  Readme.md
.github/workflows/: ci.yml
examples/: classic.yml
github/workflows/: ci.yml
src/: lib.rs  main.rs
src/domain/: config.rs  mod.rs  schedule.rs  session.rs
src/infra/: mod.rs  notify.rs  storage.rs
src/ui/: gui.rs  terminal.rs
tests/: config_validation.rs  schedule_integration.rs
