[package]
name = "pomodoro-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
license = "MIT OR Apache-2.0"
authors = ["Maxime Guillemin <guimaxali@gmail.com>"]
repository = "https://github.com/blastrider/pomodoro"
description = "CLI Pomodoro simple, offline, journal JSON + exports Markdown/CSV"
keywords = ["pomodoro","cli","productivity","timer"]
categories = ["command-line-utilities","productivity"]

[features]
default = []
notify = ["notify-rust"]

[dependencies]
# CLI + parsing
# clap = { version = "4", features = ["derive", "yaml"] }

# Errors / runtime
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Serialization / config / journal
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true } # deprecated upstream - optional, for presets
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }


# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Paths / user dirs
directories = "5"

# Signals
ctrlc = "3"

# Terminal UI
indicatif = "0.17"

# Notifications (optional)
notify-rust = { version = "4", optional = true }

# Testing / properties
proptest = { version = "1"}
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time"] }
proptest = "1"

[package.metadata.docs.rs]
all-features = false
